# uid2-client-cpp11

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: clang-format-check.yml  clang-tidy.yml  cmake-macos.yml  cmake-macosx.yml  cmake-ubuntu.yml  dev-docker-image.yml  release.yml
app/: CMakeLists.txt  example.cpp
include/uid2/: timestamp.h  types.h  uid2_token_generator.h  uid2client.h
lib/: CMakeLists.txt  aes.cpp  aes.h  base64.h  bigendianprocessor.h  httplib.h  json11.cpp  key.h  keycontainer.h  keyparser.cpp  keyparser.h  timestamp.cpp  uid2_token_generator.cpp  uid2base64urlcoder.h  uid2client.cpp  uid2encryption.cpp  uid2encryption.h  uid2tokengenerator.cpp  uid2tokengenerator.h
test/: base_64_encoding_test.cpp  encryption_tests_v2.cpp  encryption_tests_v3.cpp  encryption_tests_v4.cpp  keygen.cpp  keygen.h  test_decryption.cpp  test_decryption_v2.cpp  test_decryption_v3.cpp  test_decryption_v4.cpp  uid2_token_generator.cpp  uid2_token_generator.h
tools/: Dockerfile.cpp-env-ubuntu
